# spartan-gold-cpp

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.15C0881089DDEFD8.idx  utils.cpp.9FC28F268E35B2FA.idx  utils.h.283A7398D38F56CB.idx
include/: block.h  blockchain.h  client.h  fake-net.h  miner.h  network.h  transaction.h  utils.h
src/: block.cpp  blockchain.cpp  client.cpp  fake-net.cpp  main.cpp  miner.cpp  network.cpp  transaction.cpp  utils.cpp
src/block/: block.h
src/blockchain/: blockchain.h
src/client/: client.h
src/miner/: miner.h
src/network/: network.h
src/transaction/: transaction.h
src/utils/: utils.h
